--- a/app/assets/stylesheets/comprehensive_risk_profilers.css.scss
+++ b/app/assets/stylesheets/comprehensive_risk_profilers.css.scss
@@ -58,6 +58,10 @@ body.comprehensive_risk_profilers.show {
   #main {
     p b {
       color: $base-color;
+      font: {
+        size: medium;
+        weight: normal;
+      }
     }
     ul{
       list-style-image: url('right_arrow.png');
@@ -66,6 +70,7 @@ body.comprehensive_risk_profilers.show {
         color: $text-color;
         font: {
           size: medium;
+          weight: normal;
         }
       }
     }
