--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,7 +19,7 @@ body.home {
   }
 
   #main>h1 {
-    font-size: 3em;
+    font-size: 2em;
   }
 
   .banner {
