--- a/app/assets/stylesheets/stocks.css.scss
+++ b/app/assets/stylesheets/stocks.css.scss
@@ -149,7 +149,8 @@ body.stocks.show {
       }
     }
   }
-  .level_2 {
+  
+  aside{
     #navigation-stock {
       >a {
         @include sharp-button;
